[package]
name = "candlekeep-cli"
version = "0.5.0"
edition = "2021"
description = "CandleKeep CLI - Manage your document library from the terminal"
authors = ["CandleKeep"]
license = "MIT"
repository = "https://github.com/CandleKeepAgents/candlekeep-cli"
homepage = "https://www.getcandlekeep.com"
documentation = "https://github.com/CandleKeepAgents/candlekeep-cli"
readme = "README.md"
keywords = ["cli", "documents", "pdf", "library", "knowledge-base"]
categories = ["command-line-utilities"]

[[bin]]
name = "ck"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/ck-{ target }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/ck-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
indicatif = "0.17"
comfy-table = "7"
open = "5"
colored = "2"
anyhow = "1"
thiserror = "1"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }

[profile.release]
opt-level = 3
lto = true
strip = true
